# inbox-pii-scanner

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1c965f28e09a_stable_attachment_composite_via_partid.py  515b1b73d67d_initial_schema.py  a0f801a1c96c_add_mailbox_scope_to_syncs.py
docs/: IMPLEMENTATION_PLAN.md  README.md  api.md  architecture.md  cli.md  data-model.md  development.md  frontend.md  operations.md  scan-pipeline.md  security.md  sync-pipeline.md
docs/archives/: IMPLEMENTATION_PLAN.md
docs/decisions/: 0001-two-phase-architecture.md  0002-content-addressed-blob-storage.md  0003-single-extraction-backend.md  0004-attachment-key-uses-part-id.md  0005-three-detector-pipeline.md  0006-international-pii-tier-a.md  README.md
inbox_scanner/: blobs.py  cli.py  config.py  db.py  logging.py  migrations.py  models.py  server.py
inbox_scanner/detection/: categorizer.py  custom_regex.py  presidio_detector.py  privacy_filter_detector.py  runner.py  types.py
inbox_scanner/extraction/: docling_extractor.py  router.py
inbox_scanner/frontend/: index.html
inbox_scanner/gmail/: auth.py  client.py  sync.py
inbox_scanner/pipelines/: scan_pipeline.py
inboxaudit/: cli.py  config.py  migrations.py  server.py
tests/: test_blobs.py  test_categorizer.py  test_custom_regex.py  test_detection_runner.py  test_gmail_parsing.py  test_presidio_international.py  test_privacy_filter_merge.py  test_rate_limiter.py  test_reset.py  test_router.py  test_server.py  test_sync_classifier.py  test_sync_query.py
(+11 files in other folders)
