[project]
name = "inbox-pii-scanner"
version = "0.1.0"
description = "Local-first, read-only Gmail PII scanner for sensitive attachments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "docling>=2.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "opencv-python-headless>=4.8",
    "presidio-analyzer>=2.2",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "spacy>=3.7",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
    "torch>=2.4",
    "typer>=0.12.5,<0.22",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
inbox-scanner = "inbox_scanner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inbox_scanner"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
